adding profile picture

--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@ footer {
   margin: 20px;
 }
 .About-me img{
-  background-image: url(./images/profilepic.jpg);
+  background-image: url(./images/20221029_134140\ Small.png);
   max-width:80%;
    max-height: 80%;
     background-clip:padding-box;
