updating with project 2 link

--- a/assets/style.css
+++ b/assets/style.css
@@ -138,7 +138,7 @@ padding:15px;
   justify-content: center;
   align-self: baseline; */
 
- #container-main h1, h2, h3{
+ #container-main  h2, h3{
   padding: 20px;
  display: flex;
  flex-direction: column;
@@ -147,24 +147,42 @@ padding:15px;
  color:rgb(216, 202, 189)
    }
 
-  h2, h3{
+   h2, h3{
    padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background: linear-gradient(to top, rgba(202, 146, 67, 0.85), transparent);
- color:rgb(104, 50, 0)
+ color:rgb(168, 157, 157)
+   }
+
+   #container-main h1{
+    padding: 20px;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+   background: linear-gradient(to top, rgba(221, 214, 200, 0.767), transparent);
+   color:rgb(216, 202, 189)
+     }
+  
+
+   .para{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    color:rgb(24, 39, 42)
    }
 #container-main {
- background-image: url(./images/Zodiac.jpg);
+ background-image: url(./images/loginsignupmainpage.png);
 max-width: 1000%;
  max-height: 600px;
   background-size: cover;
-  color: whitesmoke;
+  color: rgb(83, 67, 67);
   
   }
 #container-2{
-background-image: url(./images/desk.png);
+background-image: url(./images/Zodiac.jpg);
 max-width: 40%; 
 height: 50%;
 background-size: cover;
